--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  @apply bg-gray-100
+    text-gray-900
+    dark:text-gray-100
+    dark:bg-gray-900;
+}
