--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,8 +7,7 @@
   src: url("/src/assets/fonts/Montserrat/Montserrat-VariableFont_wght.ttf")
     format("truetype");
 }
-html,
-body {
+html {
   height: 100%;
 }
 
